--- a/absolute/absolute-boxes/css/index.css
+++ b/absolute/absolute-boxes/css/index.css
@@ -5,28 +5,29 @@ html, body, h1, h2, h3, h4, h5, h6, p, div, span{
     padding:0;
     font-family:'Open Sans';
     box-sizing:border-box;
-    scroll-snap-type: y mandatory;
-    scroll-snap-type: mandatory;
-    scroll-snap-points-y: repeat(300px);
-    scroll-snap-type: y mandatory;
+}
+
+main{
+    width:100vw;
+    height:100vh;
+    background-color:#444;
+    display:grid;
+    place-items: center;
 }
 
 section{
-    width:100vw;
-    height:100vh;
+    width:80vw;
+    height:80vh;
     background-color:black;
     display:grid;
     place-items:center;
-    scroll-snap-align: center;
-    scroll-snap-stop: always; 
-    transition:.3s ease;
 }
 
 section article{
-    position:relative;
     width:50vw;
     height:50vh;
     background-color:#eee;
+    position:relative;
 }
 
 section article div{
@@ -36,4 +37,10 @@ section article div{
     width:100%;
     height:30%;
     background-color:#fff;
+}
+
+section article div h2{
+    position:absolute;
+    top:0;
+    right:0;
 }
