--- a/absolute/absolute-boxes/css/index.css
+++ b/absolute/absolute-boxes/css/index.css
@@ -41,6 +41,6 @@ section article div{
 
 section article div h2{
     position:absolute;
-    top:0;
-    right:0;
+    bottom:1rem;
+    right:1rem;
 }
