--- a/fixed/fixed-sticky-basics/css/index.css
+++ b/fixed/fixed-sticky-basics/css/index.css
@@ -4,15 +4,25 @@ html, body, main, article, h1, h2, h3, h4, h5, h6, p, div, span{
     margin:0;
     padding:0;
     font-family:'Open Sans';
+    scroll-snap-type: y mandatory;
+}
+*{
     box-sizing:border-box;
+}
+
+nav a {
+    text-decoration:none;
+    color:#4285F4;
+    font-size:1.4rem;
 }
 
 article{
     height:100vh;
     width:100vw;
     padding-top:10vh;
-    background-color:#eee;
-    border:1px solid #111;
+    display:grid;
+    place-items: center;
+    scroll-snap-align: center;
 }
 
 nav{
@@ -21,7 +31,7 @@ nav{
     position:fixed;
     top:0;
     left:0;
-    background-color:white;
+    background-color:#eee;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -29,6 +39,9 @@ nav{
 
 nav.sticky{
     position:sticky;
-    background-color:#ddd;
+    background-color:#4285F4;
+}
+nav.sticky a{
+    color:white;
 }
 
